# python-standard

./: .gitignore  README.md  docker-compose.yml  package.json  wrangler.toml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  documents.py  health.py  items.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: migrate.py  session.py
backend/app/models/: __init__.py  document.py  item.py  user.py
backend/app/schemas/: __init__.py  item.py  user.py
backend/tests/: conftest.py  test_auth.py  test_cloudflare.py  test_documents.py  test_health.py  test_items.py
docs/: overlay-ssg-setup.md  overlay-ssr-setup.md  template-variant-management.md
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  showcase-settings-context.tsx  showcase-table-search.ts  styles.css
frontend/src/components/ui/: Avatar.tsx  ProgressBar.tsx  Select.tsx  Tabs.tsx  index.ts
frontend/src/domains/auth/: login-domain.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/routes/: __root.tsx  index.tsx  login.tsx  oauth.callback.tsx  showcase.tsx
frontend/src/views/: home-view.tsx  login-view.tsx  showcase-view.tsx
scripts/: setup-variants.py
