[project]
name = "fastapi-standard-backend"
version = "1.0.0"
description = "FastAPI + SQLModel + Alembic baseline template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
    "slowapi>=0.1.9",
    "secure>=0.3.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", "alembic"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportGeneralTypeIssues = "warning"
reportPropertyTypeMismatch = "warning"
reportFunctionMemberAccess = "warning"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
